# Graphics-3d-car-game

./: .gitignore  CMakeLists.txt  Makefile  README.md
SceneGame/: CMakeLists.txt
SceneGame/include/: Camera.h  Engine.h  Geometry.h  MeshNode.h  SceneNode.h  ShaderProgram.h  assets.h  constants.h  game_logic.h  game_runtime.h  input_handler.h  physics_system.h  ui_system.h
SceneGame/shaders/: fragment.glsl  shadow_fragment.glsl  vertex.glsl
SceneGame/src/: Camera.cpp  Engine.cpp  Geometry.cpp  MeshNode.cpp  SceneNode.cpp  ShaderProgram.cpp  assets.cpp  game_logic.cpp  input_handler.cpp  main.cpp  physics_system.cpp  ui_system.cpp
